--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gebäude-Info für Feuerwehr</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <main>
@@ -31,5 +32,20 @@
     </div>
   </main>
   <script src="app.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('./service-worker.js')
+          .then(function(registration) {
+            console.log('Service Worker registriert:', registration);
+          })
+          .catch(function(error) {
+            console.error('Service Worker Registrierung fehlgeschlagen:', error);
+          });
+      });
+    } else {
+      console.warn('Service Worker wird von diesem Browser nicht unterstützt.');
+    }
+  </script>
 </body>
 </html>
